add CORS sesf.ch

--- a/netlify.toml
+++ b/netlify.toml
@@ -36,4 +36,4 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Origin = "https://sesf.ch"
